# nomnom-unity-hub

./: LICENSE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build-from-master.yml
src/: App.css  App.tsx  ContextMenu.css  main.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  cache.rs  editor.rs  editors.rs  errors.rs  generate.rs  git.rs  installs.rs  io_util.rs  io_utils.rs  main.rs  package.rs  prefs.rs  project.rs  template.rs  templates.rs
src-tauri/src/assets/: PackageClientTest.cs
src-tauri/src/old/: editors.rs  git.rs  graphql.rs  prefs.rs  templates.rs
src/components/: async-component.tsx  async-lazy-value-component.tsx  editor-version-select.tsx  editors-view.tsx  first-time-boot.tsx  foldout.tsx  installs-view.tsx  main-sidebar.tsx  new-project-view.tsx  new-template-view.tsx  package-picker.tsx  projects-view.tsx  section-view.tsx  settings-view.tsx  tab-view.tsx  validate-input.tsx  view-body.tsx  view-header.tsx
src/components/parts/: buttons.tsx
src/components/svg/: box.tsx  checkmark.tsx  chevron-down.tsx  chevron-up.tsx  delete.tsx  ellipsis-horizontal.tsx  ellipsis-vertical.tsx  folder-closed.tsx  folder-open.tsx  loading-spinner.tsx  package-plus.tsx  pin.tsx  sort.tsx  warning.tsx
src/context/: global-context.tsx  new-project-context.tsx  new-template-context.tsx
src/hooks/: useBetterState.tsx  useDelayedFlag.tsx
src/utils/: tauri-router.ts  tauri-types.ts  toast-utils.ts
src/views/editors/: editors-header.tsx  (+2 more)
(+17 files in other folders)
