[package]
name = "nomnom-unity-hub"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.63"
showfile = "0.1.1"
tauri = { version = "1", features = [
  "window-show",
  "dialog-all",
  "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1.0.30"
tar = "0.4.41"
dirs-next = "2.0.0"
filesize = "0.2.0" # or "postgres", or "mysql"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
